--- a/.env
+++ b/.env
@@ -1,18 +1,18 @@
 SITE_NAME_HEADER=Cofre Osidian
 SITE_MAIN_LANGUAGE=pt
 SITE_BASE_URL=https://contabilidadedigital.netlify.app/
-SHOW_CREATED_TIMESTAMP=false
+SHOW_CREATED_TIMESTAMP=true
 TIMESTAMP_FORMAT=MMM dd, yyyy h:mm a
-SHOW_UPDATED_TIMESTAMP=false
+SHOW_UPDATED_TIMESTAMP=true
 NOTE_ICON_DEFAULT=
 NOTE_ICON_TITLE=false
 NOTE_ICON_FILETREE=false
 NOTE_ICON_INTERNAL_LINKS=false
 NOTE_ICON_BACK_LINKS=false
 STYLE_SETTINGS_CSS=body.css-settings-manager { } body.theme-light.css-settings-manager { } body.theme-dark.css-settings-manager { }
-STYLE_SETTINGS_BODY_CLASSES=theme-dark mod-windows is-frameless is-maximized obsidian-app show-inline-title show-ribbon show-view-header css-settings-manager pdf-plus-click-embed-to-open-link pdf-plus-backlink-selection-highlight hide-pdf-embed-toolbar hide-pdf-toolbar-in-hover-editor AT-row is-focused
+STYLE_SETTINGS_BODY_CLASSES=theme-dark mod-windows is-frameless is-maximized is-focused obsidian-app show-inline-title show-ribbon show-view-header css-settings-manager pdf-plus-click-embed-to-open-link pdf-plus-backlink-selection-highlight hide-pdf-embed-toolbar hide-pdf-toolbar-in-hover-editor AT-row
 USE_FULL_RESOLUTION_IMAGES=false
-THEME=https://raw.githubusercontent.com/izumin5210/obsidian-iceberg/HEAD/theme.css
+THEME=https://raw.githubusercontent.com/ninetyfive666/Planetary/HEAD/theme.css
 BASE_THEME=light
 dgHomeLink=true
 dgPassFrontmatter=true
