--- a/.env
+++ b/.env
@@ -10,9 +10,9 @@ NOTE_ICON_FILETREE=false
 NOTE_ICON_INTERNAL_LINKS=false
 NOTE_ICON_BACK_LINKS=false
 STYLE_SETTINGS_CSS=body.css-settings-manager { } body.theme-light.css-settings-manager { } body.theme-dark.css-settings-manager { }
-STYLE_SETTINGS_BODY_CLASSES=theme-dark mod-windows is-frameless is-maximized is-focused obsidian-app show-inline-title show-ribbon show-view-header css-settings-manager pdf-plus-click-embed-to-open-link pdf-plus-backlink-selection-highlight hide-pdf-embed-toolbar hide-pdf-toolbar-in-hover-editor AT-row
+STYLE_SETTINGS_BODY_CLASSES=theme-dark mod-windows is-frameless is-maximized obsidian-app show-inline-title show-ribbon show-view-header css-settings-manager pdf-plus-click-embed-to-open-link pdf-plus-backlink-selection-highlight hide-pdf-embed-toolbar hide-pdf-toolbar-in-hover-editor AT-row is-focused
 USE_FULL_RESOLUTION_IMAGES=false
-THEME=https://raw.githubusercontent.com/ninetyfive666/Planetary/HEAD/theme.css
+THEME=https://raw.githubusercontent.com/abrahambahez/Brutalism/HEAD/theme.css
 BASE_THEME=light
 dgHomeLink=true
 dgPassFrontmatter=true
