--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-SITE_NAME_HEADER=Cofre Osidian
+SITE_NAME_HEADER=Help Contábil
 SITE_MAIN_LANGUAGE=pt
 SITE_BASE_URL=https://contabilidadedigital.netlify.app/
 SHOW_CREATED_TIMESTAMP=true
