--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ STYLE_SETTINGS_CSS=body.css-settings-manager { } body.theme-light.css-settings-m
 STYLE_SETTINGS_BODY_CLASSES=mod-windows is-frameless is-maximized obsidian-app theme-light show-inline-title show-ribbon show-view-header css-settings-manager pdf-plus-click-embed-to-open-link pdf-plus-backlink-selection-highlight hide-pdf-embed-toolbar hide-pdf-toolbar-in-hover-editor no-animations default AT-row is-focused
 USE_FULL_RESOLUTION_IMAGES=true
 THEME=https://raw.githubusercontent.com/xRyul/obsidian-arcane-theme/HEAD/theme.css
-BASE_THEME=light
+BASE_THEME=dark
 dgHomeLink=true
 dgPassFrontmatter=true
 dgShowBacklinks=true
