--- a/.env
+++ b/.env
@@ -10,9 +10,9 @@ NOTE_ICON_FILETREE=false
 NOTE_ICON_INTERNAL_LINKS=false
 NOTE_ICON_BACK_LINKS=false
 STYLE_SETTINGS_CSS=body.css-settings-manager { } body.theme-light.css-settings-manager { } body.theme-dark.css-settings-manager { }
-STYLE_SETTINGS_BODY_CLASSES=mod-windows is-frameless is-maximized obsidian-app show-inline-title show-ribbon show-view-header css-settings-manager pdf-plus-click-embed-to-open-link pdf-plus-backlink-selection-highlight AT-row theme-light hide-pdf-embed-toolbar hide-pdf-toolbar-in-hover-editor no-animations default is-focused
+STYLE_SETTINGS_BODY_CLASSES=mod-windows is-frameless is-maximized obsidian-app show-inline-title show-ribbon show-view-header css-settings-manager pdf-plus-click-embed-to-open-link pdf-plus-backlink-selection-highlight AT-row theme-dark hide-pdf-embed-toolbar hide-pdf-toolbar-in-hover-editor is-focused
 USE_FULL_RESOLUTION_IMAGES=true
-THEME=https://raw.githubusercontent.com/Bluemoondragon07/Wikipedia-Theme/HEAD/theme.css
+THEME=https://raw.githubusercontent.com/incantatem2/Obsidian-aged-whisky/HEAD/theme.css
 BASE_THEME=dark
 dgHomeLink=true
 dgPassFrontmatter=true
