--- a/.env
+++ b/.env
@@ -9,10 +9,10 @@ NOTE_ICON_TITLE=false
 NOTE_ICON_FILETREE=false
 NOTE_ICON_INTERNAL_LINKS=false
 NOTE_ICON_BACK_LINKS=false
-STYLE_SETTINGS_CSS=body.css-settings-manager { } body.theme-light.css-settings-manager { } body.theme-dark.css-settings-manager { }
+STYLE_SETTINGS_CSS=body.css-settings-manager { --pdf-plus-backlink-popover-width: 390px; } body.theme-light.css-settings-manager { } body.theme-dark.css-settings-manager { }
 STYLE_SETTINGS_BODY_CLASSES=mod-windows is-frameless is-maximized obsidian-app theme-light show-inline-title show-ribbon show-view-header css-settings-manager pdf-plus-click-embed-to-open-link pdf-plus-backlink-selection-highlight hide-pdf-embed-toolbar hide-pdf-toolbar-in-hover-editor AT-row is-focused
 USE_FULL_RESOLUTION_IMAGES=true
-THEME=https://raw.githubusercontent.com/Bluemoondragon07/Wikipedia-Theme/HEAD/theme.css
+THEME=https://raw.githubusercontent.com/elliotboyd/obsidian-traffic-lights/HEAD/obsidian.css
 BASE_THEME=light
 dgHomeLink=true
 dgPassFrontmatter=true
