--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ SITE_NAME_HEADER=Help Contábil
 SITE_MAIN_LANGUAGE=pt
 SITE_BASE_URL=https://contabilidadedigital.netlify.app/
 SHOW_CREATED_TIMESTAMP=true
-TIMESTAMP_FORMAT=MMM dd, yyyy h:mm a
+TIMESTAMP_FORMAT=dd MMM, yyyy
 SHOW_UPDATED_TIMESTAMP=true
 NOTE_ICON_DEFAULT=
 NOTE_ICON_TITLE=false
