--- a/.env
+++ b/.env
@@ -10,10 +10,10 @@ NOTE_ICON_FILETREE=false
 NOTE_ICON_INTERNAL_LINKS=false
 NOTE_ICON_BACK_LINKS=false
 STYLE_SETTINGS_CSS=body.css-settings-manager { --pdf-plus-backlink-popover-width: 390px; --pdf-plus-highlight-padding-vertical-em: 0em; } body.theme-light.css-settings-manager { } body.theme-dark.css-settings-manager { }
-STYLE_SETTINGS_BODY_CLASSES=theme-dark mod-windows is-frameless is-maximized obsidian-app styled-scrollbars folder-notes-plugin hide-folder-note folder-note-underline folder-note-underline-path fn-whitespace-stop-collapsing version-1-7-2 pdf-plus-click-embed-to-open-link pdf-plus-backlink-selection-highlight css-settings-manager hide-pdf-embed-toolbar hide-pdf-toolbar-in-hover-editor show-view-header show-ribbon is-focused
+STYLE_SETTINGS_BODY_CLASSES=mod-windows is-frameless is-maximized obsidian-app styled-scrollbars show-ribbon show-view-header folder-notes-plugin hide-folder-note folder-note-underline folder-note-underline-path fn-whitespace-stop-collapsing version-1-7-2 pdf-plus-click-embed-to-open-link pdf-plus-backlink-selection-highlight css-settings-manager theme-light hide-pdf-embed-toolbar hide-pdf-toolbar-in-hover-editor is-focused
 USE_FULL_RESOLUTION_IMAGES=true
-THEME=https://raw.githubusercontent.com/wulflo/obsidian-3Sumaq/HEAD/theme.css
-BASE_THEME=dark
+THEME=https://raw.githubusercontent.com/rcvd/obsidian_ia/HEAD/theme.css
+BASE_THEME=light
 dgHomeLink=true
 dgPassFrontmatter=true
 dgShowBacklinks=true
