--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ STYLE_SETTINGS_CSS=body.css-settings-manager { --pdf-plus-backlink-popover-width
 STYLE_SETTINGS_BODY_CLASSES=mod-windows is-frameless is-maximized obsidian-app styled-scrollbars show-ribbon show-view-header folder-notes-plugin hide-folder-note folder-note-underline folder-note-underline-path fn-whitespace-stop-collapsing version-1-7-2 pdf-plus-click-embed-to-open-link pdf-plus-backlink-selection-highlight css-settings-manager theme-light hide-pdf-embed-toolbar hide-pdf-toolbar-in-hover-editor is-focused
 USE_FULL_RESOLUTION_IMAGES=true
 THEME=https://raw.githubusercontent.com/b3h3m0th/black-obsidian-theme/HEAD/theme.css
-BASE_THEME=light
+BASE_THEME=dark
 dgHomeLink=true
 dgPassFrontmatter=true
 dgShowBacklinks=true
